...
      behavior={Platform.OS === "ios" ? "padding" : "height"}
    >
      <ScrollView
        contentContainerClassName="flex-grow justify-center px-6"
        keyboardShouldPersistTaps="handled"
      >
        <Text className="text-3xl font-bold text-center mb-8">Entrar</Text>

        {/* Email */}
        <Text className="text-sm font-medium text-gray-700 mb-1">Email</Text>
        <Controller
          control={control}
          name="email"
          render={({ field: { onChange, onBlur, value } }) => (
            <TextInput
              testID="input-email"
              className="border border-gray-300 rounded-lg px-4 py-3 mb-1 text-base"
              placeholder="seu@email.com"
              keyboardType="email-address"
              autoCapitalize="none"
              onBlur={onBlur}
              onChangeText={onChange}
...
        <Text className="text-sm font-medium text-gray-700 mb-1 mt-3">Senha</Text>
        <Controller
          control={control}
          name="senha"
          render={({ field: { onChange, onBlur, value } }) => (
            <TextInput
              testID="input-password"
              className="border border-gray-300 rounded-lg px-4 py-3 mb-1 text-base"
              placeholder="Sua senha"
              secureTextEntry
              onBlur={onBlur}
              onChangeText={onChange}
              value={value}
...
